# duck2

./: .gitignore  Cargo.toml
backend/: package-lock.json  package.json
backend/lib/: backend-stack.ts
frontend/: Cargo.toml  TODO.md
frontend/docs/: index.html
frontend/src/: lib.rs  main.rs  markdown_worker.rs
lambdas/consumer-lambda/: Cargo.toml
lambdas/producer-lambda/: Cargo.toml
