# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "duck2"
version = "0.1.0"
edition = "2018"

[dependencies]
dioxus = { version = "0.1.6", features = ["web"] }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.78"
log = "0.4.14"
console_error_panic_hook = "*"
im-rc = "15.0.0"
gloo = "0.8.0"
pulldown-cmark = "0.9.2"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
